[package]
name = "uwuntu-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
once_cell = "1.16.0"
rocket = { version = "0.5.0-rc.2", features = ["serde_json", "json"] }
serde = { version = "1.0.150", features = ["derive"] }
